# livekit_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.ipynb  agent.py  init_secrets.py  langgraph_agent.py  langsmith_processor.py  pyproject.toml  railway.json  railway_secrets.py  reauth_google.py  render.yaml  render_secrets_helper.py  requirement.txt  requirements.txt  server.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/token/: route.ts
static/: app.js  index.html  style.css
