[project]
name = "livekit_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth-oauthlib>=1.3.0",
    "langchain>=1.2.10",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.0.10",
    "livekit-agents[cartesia,groq,langchain,langchainllm,openai,sarvam,silero]>=1.4.3",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-silero>=1.4.3",
    "livekit-plugins-turn-detector>=1.4.3",
    "opentelemetry-exporter-otlp>=1.39.1",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.26",
    "tzdata>=2025.3",
]
